project(18_glsl_ebo_uv)
set(CMAKE_CXX_STANDARD 11)
set(PROJECT_SRCS ${PROJECT_SRCS} ./main.cpp)
add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
if(EMSCRIPTEN)
target_compile_definitions(${PROJECT_NAME} PUBLIC -DEMSCRIPTEN=1)
set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s USE_WEBGL2=1 -s FULL_ES3=1")
endif(EMSCRIPTEN)
